--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server/server",
-    "nodemon":"nodemon server/server",
+    "start": "node server/server",
+    "nodemon": "nodemon server/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "FRJMA",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongoose": "^5.2.12",
+    "mongoose-unique-validator": "^2.0.1",
+    "underscore": "^1.9.1"
   }
 }
